# study_note

./: .gitignore  README.md  dbnote.md  redis.conf  sth.md
OS/: README.md  note.txt
OS/64bitos/example/: objdump_test.c  objtest_asm_part.asm  regparm_test.c
OS/64bitos/note/: Introduction.md  advance(cpu-architecture).md  file_sys.md  imporove_bootloader.md  kernel.md  kernel_pro.md  process.md  tips.md
OS/64bitos/src/: build&run.sh  kernel.asm  loader.asm  util_ex.c
OS/blog_os/: Cargo.toml  blog_os_cn  build.sh  run.bat
OS/blog_os/.cargo/: config
OS/blog_os/blog_os_cn(Exceptions开始)/: allocator-designs.md  async-await.md  double_faults.md  exceptions.md  hardware_interrupts.md  heap_allocation.md  pageing_implementation.md  paging-introduction.md  paging_implementation.md
OS/blog_os/src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  note.txt  serial.rs  vga_buffer.rs
OS/blog_os/src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
OS/blog_os/src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
OS/blog_os/tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
assembly/ch11/: 3_1.asm  note.txt
assembly/ch12_13/: 10h.asm  do0.asm  loops.asm  note.txt
assembly/ch14_15/: a.asm  m.asm  note.txt
assembly/ch16/: 16_1.asm  add.asm  note.txt
assembly/ch17/: bios.asm  note.txt  read.asm  rw.asm
assembly/ch1_5/: 2.asm  ex1.asm  loop.asm  loop2.asm  loop3.asm  loop4.asm  loop5.asm  loop6.asm  loop7.asm  note.txt
assembly/ch6_10/: 1.asm  2_10.asm  2_11.asm  2_12.asm  2_13.asm  2_14.asm  2_15.asm  2_16.asm  2_17.asm  2_18.asm  2_19.asm  2_2.asm  2_20.asm  2_21.asm  2_3.asm  2_4.asm  2_5.asm  2_6.asm  2_7.asm  2_8.asm  2_9.asm  note.txt
assembly/extra/: a.c  b.c  c0s.asm  f.c  m.c  note.txt  simple.c  uml.c  url.c  url2.c
csharp/: tip.md
pwn/code/: extractmc.sh  shellcode64.asm  shellcode642.asm
pwn/note/: linux安全机制.md  tip.md  汇编基础.md  漏洞开发.md
pwn/基础/: linux安全机制.md  source2elf.md  基础知识.md
rust/: note.txt
rust/async_await/: Cargo.toml
rust/async_await/src/: lib.rs  main.rs  note.txt
rust/closure/: Cargo.toml
rust/closure/src/: lib.rs  main.rs
rust/collection/src/: main.rs
rust/concurrnet_program/: Cargo.toml
rust/concurrnet_program/src/: main.rs  note.txt
rust/config/: Cargo.toml
rust/config/src/: Cargo.toml.txt  lib.rs
rust/error/: Cargo.toml
rust/error/src/: hello.txt  main.rs
rust/guess_number/: Cargo.toml
rust/guess_number/src/: main.rs
rust/macth_pattern/: Cargo.toml
rust/macth_pattern/src/: main.rs  note.txt
rust/match_pattern/: Cargo.toml
rust/minigrep/src/: lib.rs  main.rs
rust/oop/src/: lib.rs  main.rs  note.txt
rust/p2p/: Cargo.toml
rust/p2p/src/: main.rs
rust/pipviewer/: Cargo.toml  test.txt
rust/pipviewer/src/: args.rs  main.rs  read.rs  write.rs
rust/rectangles/src/: main.rs
rust/restaurant/src/: lib.rs
rust/s1/: Cargo.toml
rust/s1/http/: note.txt
rust/s1/src/: main.rs
rust/sqlx_ex/: Cargo.toml
rust/sqlx_ex/src/: main.rs
rust/test_part/: Cargo.toml
rust/trait_life/: Cargo.toml
tip/: escape.go  test_b.c  test_defer.go
translations/: E2EE.md  README.md
web安全/doc/: DDOS以及安全运营.md  前端应用安全.md  服务端应用安全.md  概念.md
(+143 files in other folders)
