[package]
name = "blog_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# 禁用栈展开


[dependencies]
bootloader = "0.9.3"
volatile = "0.2.6"
spin = "0.9.4"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]


[package.metadata.bootimage]
build-command = ["xbuild"]