[package]
name = "blog_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# 禁用栈展开


[dependencies]
bootloader = {version="0.9.8",features=["map_physical_memory"]}
volatile = "0.2.6"
spin = "0.9.4"
x86_64 = "0.14.10"
uart_16550 = "0.2.0"  # 串口通信实现内核向宿主系统发送数据
pic8259="0.10.2"    # 中断控制器
pc-keyboard="0.5.0" # 键盘scancode 转义
linked_list_allocator = "0.10.4"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false  # 禁用默认特性 兼容[no_std]
features = ["alloc"]


[dependencies.conquer-once]
version = "0.2.0"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]


[package.metadata.bootimage]
build-command = ["xbuild"]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04","-serial", "stdio","-display", "none"]
test-success-exit-code = 33
test-timeout = 300  # 单位second

# 对于单个函数的测试 无需runner 直接_start入口调用即可
[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false