[package]
name = "sqlx_ex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = {version = "0.6", features=["runtime-tokio-rustls","postgres","chrono"]}
serde = {version="1.0.145",features=["derive"]}
chrono ={version="0.4.22",features=["serde"]}
tokio = { version = "1",features=["full"] }